@@ -283,6 +283,7 @@ because of Phabricator reports.
 * SVGMetadataExtractor class, deprecated in 1.34, has been removed.
 * ProcessCacheLRU class, deprecated in 1.32, has been removed.
 * wfForeignMemcKey(), deprecated in 1.35, has been removed.
+* LoadBalancer::safeWaitForMasterPos(), deprecated in 1.35, has been removed.
 * …
 
 === Deprecations in 1.36 ===
